--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "maximilianoind",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "require-context": "^1.1.0",
     "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
