--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^5.0.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.21.3",
+    "react-slick": "^0.30.2",
     "react-use": "^17.5.0",
     "require-context": "^1.1.0",
     "resolve": "^1.20.0",
@@ -55,6 +56,7 @@
     "sass": "^1.70.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
+    "slick-carousel": "^1.8.1",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
